Confirmar que existe un routerLink hacia el componente de médicos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
+<a routerLink="/medicos">Médicos</a>
+<a routerLink="/hospital">Médicos</a>
+<a routerLink="/usuario">Médicos</a>
+<a routerLink="/perfil">Médicos</a>
+<a routerLink="/404">Médicos</a>
 <router-outlet></router-outlet>
