Errores por selectores desconocidos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,2 @@
-<a routerLink="/medicos">Médicos</a>
-<a routerLink="/hospital">Médicos</a>
-<a routerLink="/usuario">Médicos</a>
-<a routerLink="/perfil">Médicos</a>
-<a routerLink="/404">Médicos</a>
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
